DeveloperOrg/force-app/main/default/objects/Person__c/fields/book__c.field-meta.xml
<CustomField>
    <fullName>book__c</fullName>
    <label>book</label>
    <referenceTo>book__c</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>