DeveloperOrg/force-app/main/default/objects/Person__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Financial Accounting</fullName>
            </value>
            <value>
                <fullName>Business Economics</fullName>
            </value>
            <value>
                <fullName>Cost Accounting</fullName>
            </value>
            <value>
                <fullName>Criminal Law</fullName>
            </value>
            <value>
                <fullName>Contract Law</fullName>
            </value>
            <value>
                <fullName>Family Law</fullName>
            </value>
            <value>
                <fullName>Teaching Methods</fullName>
            </value>
            <value>
                <fullName>Classroom Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>