DeveloperOrg/force-app/main/default/objects/Person__c/fields/Date_of_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Purchasing__c</fullName>
    <label>Date of Purchasing</label>
    <type>Date</type>
</CustomField>