DeveloperOrg/force-app/main/default/objects/Person__c/validationRules/date.validationRule-meta.xml
<ValidationRule>
    <fullName>date</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Date__c )</errorConditionFormula>
    <errorMessage>Valid Date</errorMessage>
</ValidationRule>