DeveloperOrg/force-app/main/default/objects/Person__c/validationRules/Description_is_more_than_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_more_than_2</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Description__c) &gt;3</errorConditionFormula>
    <errorMessage>Description__c</errorMessage>
</ValidationRule>