DeveloperOrg/force-app/main/default/objects/Person__c/validationRules/phone.validationRule-meta.xml
<ValidationRule>
    <fullName>phone</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( phone__c )  &lt;&gt; 10</errorConditionFormula>
    <errorMessage>phone</errorMessage>
</ValidationRule>